# rust-projects

chat_server/: Cargo.toml
chat_server/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: android_app_log.txt  lib.rs  main.rs
servidor/: 404.html  Cargo.toml  index.html
servidor/src/: main.rs
twitter-clone/: Cargo.toml
twitter-clone/migrations/2021-07-25-035252_create_tweets/: up.sql
twitter-clone/migrations/2021-07-25-035453_create_likes/: up.sql
twitter-clone/src/: likes.rs  main.rs  tweets.rs
