[package]
name = "twitter-clone"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "3"
diesel = { version = "1.4.4", features = ['postgres', 'r2d2', 'uuidv07', 'chrono'] }
dotenv = "0.15.0"
uuid = { version = "0.8.2", features = ["serde", "v4"]}
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.106"
serde_json = "1.0.51"
